src/objects/Transaction_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Tier_1_Transaction_Entry</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 1</label>
        <queue>Tier_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TX-{00000}</displayFormat>
        <label>TX Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DebitAmountValidation</fullName>
        <active>false</active>
        <description>Cannot debit an amount which is less than available balance</description>
        <errorConditionFormula>(Contact__r.Available_Balance__c  &lt;  Amount__c ) &amp;&amp;   ISPICKVAL( Type__c , &quot;Debit&quot;)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Cannot debit , due to insufficient Balance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TransactionValidationForActiveContacts</fullName>
        <active>false</active>
        <description>Transaction is possible only for active Contacts and not for inactive contacts.</description>
        <errorConditionFormula>ISPICKVAL(Contact__r.StatusPicklist__c, &quot;Inactive&quot;)</errorConditionFormula>
        <errorMessage>Cannot proceed the transaction as the contact is inactive</errorMessage>
    </validationRules>
</CustomObject>